data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_822.wast
;; 3. **Test for Unmatched Operand Stack:**    - **Description**: A `br` instruction with an operand stack that mismatches the expected input type for the target label.    - **Constraint Checked**: Operand types `[t*1 t*]` matching the result type `[t*]` of `C.labels[l]`.    - **Relation to CFG**: Ensures operand stack consistency through control flow branches, maintaining CFG validity.

(assert_invalid
  (module
    (func $unmatched-operand-stack
      (block (result i32)
        (i64.const 42)
        (br 0)
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)